<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Raven</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_chats">Chats</string>
    <string name="action_search">Suchen</string>
    <string name="action_newchat">Neuer Chat</string>
    <string name="action_newgroup">Neue Gruppe</string>
    <string name="action_contacts">Kontakte</string>
    <string name="action_favorits">Favoriten</string>
    <string name="title_activity_chat_view">ChatView</string>
    <string name="group_info_notification">Benachrichtigungen</string>
    <string name="settings_notification">Benachrichtigungen</string>
    <string name="settings_in_app_vib">In-App vibrieren</string>
    <string name="settings_chat_background">Chat Hintergrund</string>
    <string name="settings_chat_auto_backup">Autom. Backup</string>
    <string name="settings_chat_instant_backup">Jetzt Backup erstellen</string>
    <string name="settings_chat_settings">CHAT EINSTELLUNGEN</string>
    <string name="settings_blocked_contact_stettings">BLOCKIERT</string>
    <string name="title_activity_group_info">Gruppeninfo</string>
    <string name="title_activity_contact_view">Kontakte</string>
    <string name="title_activity_new_group">NewGroup</string>
    <string name="chat_entity_info_contact_added">wurde hinzugefügt</string>
    <string name="chat_entity_info_contact_left">hat die Unterhaltung verlassen</string>
    <string name="chat_group_info_members">Mitglieder</string>
    <string name="title_activity_settings">Einstellungen</string>

</resources>
