<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsView" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@drawable/borderbottom" >

        <LinearLayout
            android:id="@+id/layout_settings_header_back"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:focusableInTouchMode="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_settings_header_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="btnSettingsBackClicked"
                android:paddingLeft="20dp"
                android:text="Chats"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="19sp"
                android:width="70dp" />

            <LinearLayout
                android:id="@+id/layout_settings_header_middle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lbl_settings_header_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1.5"
                    android:gravity="center_vertical"
                    android:text="@string/title_activity_settings"
                    android:textSize="17sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#F1F1F1" >

        <LinearLayout
            android:id="@+id/llayout_settings_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lbl_settings_own_telnr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:paddingLeft="20dp"
                android:text="MEINE NUMMER:  +01 234 1234567"
                android:textColor="#777" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottomtop"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/img_settings_profile_pic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_launcher" />

                <EditText
                    android:id="@+id/txt_settings_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:minLines="1"
                    android:text="Name"
                    android:textColor="@android:color/holo_blue_light" >

                </EditText>
            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/borderbottom"
               android:clickable="true"
               android:gravity="center_vertical"
               android:onClick="btnSettingsProfileStatusClicked"
               android:paddingBottom="7dp"
               android:paddingTop="7dp" >

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="match_parent"
                   android:layout_marginLeft="20dp"
                   android:gravity="center_vertical"
                   android:text="Status:" />

                <TextView
                    android:id="@+id/lbl_settings_profile_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Status"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="18sp" />

            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/settings_notification" />

                <Switch
                    android:id="@+id/switch_settings_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/settings_in_app_vib" />

                <Switch
                    android:id="@+id/switch_settings_inapp_vib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:text="@string/settings_chat_settings"
                android:textColor="#777" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottomtop"
                android:clickable="true"
                android:gravity="center_vertical"
                android:onClick="btnSettingsChatBackgroundClicked"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/lbl_settings_chat_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/settings_chat_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:clickable="true"
                android:onClick="btnSettingsChatBackupClicked">

                <TextView
                    android:id="@+id/lbl_settings_auto_backup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/settings_chat_auto_backup" />

                <TextView
                    android:id="@+id/lbl_settings_auto_backup_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="Täglich"
                    android:textColor="#777"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/borderbottom"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:clickable="true"
                android:onClick="btnSettingsInstantBackupClicked">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:text="@string/settings_chat_instant_backup"
                    android:textColor="@android:color/holo_blue_light" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"
                android:text="@string/settings_blocked_contact_stettings"
                android:textColor="#777" />
            
            <LinearLayout
                android:id="@+id/llayout_settings_blocked_contacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/borderbottom"
                android:paddingLeft="20dp"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/btn_settings_add_blocked_contact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/borderbottom"
                android:gravity="left|center_vertical"
                android:onClick="btnSettingsAddBlockedContactClicked"
                android:paddingLeft="20dp"
                android:text="+"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>